feat: Introduce new navigation and utility components, and update existing UI elements and documentation.

--- a/components.html
+++ b/components.html
@@ -78,7 +78,7 @@
 
     <section class="components-page">
       <div class="container">
-        <div class="category-section">
+        <div id="inputs" class="category-section">
           <h2 class="category-title">
             <i class="fas fa-hand-pointer"></i>
             Inputs
@@ -170,7 +170,7 @@
           </div>
         </div>
 
-        <div class="category-section">
+        <div id="layout" class="category-section">
           <h2 class="category-title">
             <i class="fas fa-th-large"></i>
             Layout
@@ -262,7 +262,7 @@
           </div>
         </div>
 
-        <div class="category-section">
+        <div id="feedback" class="category-section">
           <h2 class="category-title">
             <i class="fas fa-bell"></i>
             Feedback
@@ -354,63 +354,93 @@
           </div>
         </div>
 
-        <div class="category-section">
+        <div id="navigation" class="category-section">
           <h2 class="category-title">
             <i class="fas fa-compass"></i>
             Navigation
           </h2>
           <div class="components-grid">
-            <a href="#" class="component-card">
+            <a
+              href="components/navbar.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="0"
+            >
               <div class="card-icon">
                 <i class="fas fa-bars"></i>
               </div>
               <h3>Navbar</h3>
-              <p>Responsive navigation bars.</p>
+              <p>6 navbar styles.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/sidebar.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="50"
+            >
               <div class="card-icon">
                 <i class="fas fa-stream"></i>
               </div>
               <h3>Sidebar</h3>
-              <p>Collapsible sidebars with menu items.</p>
+              <p>4 sidebar styles.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/tabs.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
               <div class="card-icon">
                 <i class="fas fa-folder-open"></i>
               </div>
               <h3>Tabs</h3>
-              <p>Tab navigation with panels.</p>
+              <p>6 tab styles.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/breadcrumb.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="150"
+            >
               <div class="card-icon">
                 <i class="fas fa-chevron-right"></i>
               </div>
               <h3>Breadcrumb</h3>
-              <p>Breadcrumb navigation trails.</p>
+              <p>6 breadcrumb styles.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/pagination.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="200"
+            >
               <div class="card-icon">
                 <i class="fas fa-ellipsis-h"></i>
               </div>
               <h3>Pagination</h3>
-              <p>Page navigation controls.</p>
+              <p>7 pagination styles.</p>
               <span class="card-arrow">→</span>
             </a>
 
-            <a href="#" class="component-card">
+            <a
+              href="components/link.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="250"
+            >
               <div class="card-icon">
                 <i class="fas fa-link"></i>
               </div>
               <h3>Link</h3>
-              <p>Styled links with hover effects.</p>
+              <p>10 link styles with hover effects.</p>
               <span class="card-arrow">→</span>
             </a>
           </div>
