--- a/docs.html
+++ b/docs.html
@@ -106,6 +106,24 @@
                 <li><a href="#spacer">Spacer</a></li>
                 <li><a href="#stack">Stack</a></li>
               </ul>
+              <h4>Feedback</h4>
+              <ul>
+                <li><a href="#alert">Alert</a></li>
+                <li><a href="#toast">Toast</a></li>
+                <li><a href="#modal">Modal</a></li>
+                <li><a href="#spinner">Spinner</a></li>
+                <li><a href="#progress">Progress</a></li>
+                <li><a href="#skeleton">Skeleton</a></li>
+              </ul>
+              <h4>Navigation</h4>
+              <ul>
+                <li><a href="#navbar">Navbar</a></li>
+                <li><a href="#sidebar">Sidebar</a></li>
+                <li><a href="#breadcrumb">Breadcrumb</a></li>
+                <li><a href="#tabs">Tabs</a></li>
+                <li><a href="#pagination">Pagination</a></li>
+                <li><a href="#link">Link</a></li>
+              </ul>
             </nav>
           </aside>
 
