--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
     <section class="hero" id="hero">
       <div class="hero-content" data-aos="fade-up" data-aos-duration="1000">
         <h1 class="hero-title">
-          <span class="typewriter-text">Web Components</span>
+          <span class="typewriter-text">FrontEnd Components</span>
         </h1>
 
-        <p class="hero-description" data-aos="fade-up" data-aos-delay="200">
+        <p class="hero-description" data-aos="fade-up" data-aos-delay="150">
           KvoLib is my personal collection of flexible and clean UI components
           for building modern web interfaces.
         </p>
 
-        <div class="hero-actions" data-aos="fade-up" data-aos-delay="400">
+        <div class="hero-actions" data-aos="fade-up" data-aos-delay="300">
           <a href="components.html" class="btn btn-primary btn-xl">
             See Components
             <i class="fas fa-arrow-right"></i>
