--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
     <div data-include="assets/layout/footer.html"></div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script
+      src="https://instant.page/5.2.0"
+      type="module"
+      integrity="sha384-jnZyxPjiipYXnSU0ez8Mczvm7ldl7+52e2T/zDXl0jyBx0GqWU3LQFuaM6h8RLdV"
+    ></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
