refactor: Implement new component viewer system and centralize head asset loading across component documentation.

--- a/components.html
+++ b/components.html
@@ -9,29 +9,7 @@
     <meta name="view-transition" content="same-origin" />
     <title>Components - KvoLib</title>
 
-    <style>
-      html,
-      body {
-        background: #000;
-        color: #fff;
-        color-scheme: dark;
-      }
-    </style>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-
-    <link rel="icon" type="image/png" href="assets/img/icon.png" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <script src="/assets/js/head-loader.js"></script>
   </head>
   <body>
     <script src="assets/js/navbar-loader.js"></script>
@@ -420,12 +398,6 @@
 
     <div data-include="assets/layout/footer.html"></div>
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script
-      src="https://instant.page/5.2.0"
-      type="module"
-      integrity="sha384-jnZyxPjiipYXnSU0ez8Mczvm7ldl7+52e2T/zDXl0jyBx0GqWU3LQFuaM6h8RLdV"
-    ></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/scripts-loader.js"></script>
   </body>
 </html>
