refactor: Implement new component viewer structure with embedded code examples and tabbed playground access.

--- a/index.html
+++ b/index.html
@@ -144,19 +144,73 @@
       </div>
     </section>
 
-    <section class="cta-section">
+    <section id="templates" class="components-section">
       <div class="container">
-        <div class="cta-content" data-aos="zoom-in">
-          <h2>Ready to explore?</h2>
-          <p>Check out the component library and start using KvoLib.</p>
-          <div class="cta-actions">
-            <a href="#" class="btn btn-white btn-xl">
-              Get Started
-              <i class="fas fa-arrow-right"></i>
-            </a>
-          </div>
+        <div class="section-header" data-aos="fade-up">
+          <span class="section-badge">Templates</span>
+          <h2 class="section-title">Ready-to-use pages</h2>
+          <p class="section-description">
+            Complete page templates to kickstart your project.
+          </p>
         </div>
-        <div class="cta-glow"></div>
+
+        <div class="components-grid">
+          <a
+            href="/template.html#auth"
+            class="component-card"
+            data-aos="fade-up"
+            data-aos-delay="0"
+          >
+            <div class="card-icon">
+              <i class="fas fa-lock"></i>
+            </div>
+            <h3>Authentication</h3>
+            <p>Login, register, and password reset pages.</p>
+            <span class="card-arrow">→</span>
+          </a>
+
+          <a
+            href="/template.html#landing"
+            class="component-card"
+            data-aos="fade-up"
+            data-aos-delay="100"
+          >
+            <div class="card-icon">
+              <i class="fas fa-rocket"></i>
+            </div>
+            <h3>Landing Page</h3>
+            <p>Hero, pricing, features, and testimonial sections.</p>
+            <span class="card-arrow">→</span>
+          </a>
+
+          <a
+            href="/template.html#dashboard"
+            class="component-card"
+            data-aos="fade-up"
+            data-aos-delay="200"
+          >
+            <div class="card-icon">
+              <i class="fas fa-chart-line"></i>
+            </div>
+            <h3>Dashboard</h3>
+            <p>Admin panels, settings, and profile pages.</p>
+            <span class="card-arrow">→</span>
+          </a>
+
+          <a
+            href="/template.html#content"
+            class="component-card"
+            data-aos="fade-up"
+            data-aos-delay="300"
+          >
+            <div class="card-icon">
+              <i class="fas fa-file-alt"></i>
+            </div>
+            <h3>Content</h3>
+            <p>Blog, portfolio, contact, and error pages.</p>
+            <span class="card-arrow">→</span>
+          </a>
+        </div>
       </div>
     </section>
 
