feat: Add new templates for image gallery, carousel, video player, notification center, search results, empty state, before/after, and file upload, alongside new components for headings, table,

--- a/components.html
+++ b/components.html
@@ -393,6 +393,134 @@
             </a>
           </div>
         </div>
+
+        <div id="data-display" class="category-section">
+          <h2 class="category-title">
+            <i class="fas fa-table"></i>
+            Data Display
+          </h2>
+          <div class="components-grid">
+            <a
+              href="components/badge.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="0"
+            >
+              <div class="card-icon">
+                <i class="fas fa-certificate"></i>
+              </div>
+              <h3>Badge</h3>
+              <p>Status labels and notification badges.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="components/avatar.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="50"
+            >
+              <div class="card-icon">
+                <i class="fas fa-user-circle"></i>
+              </div>
+              <h3>Avatar</h3>
+              <p>User profile images with various sizes.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="components/tooltip.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="card-icon">
+                <i class="fas fa-comment-dots"></i>
+              </div>
+              <h3>Tooltip</h3>
+              <p>Hover information popups.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="components/table.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="150"
+            >
+              <div class="card-icon">
+                <i class="fas fa-table"></i>
+              </div>
+              <h3>Table</h3>
+              <p>Data tables with modern styling.</p>
+              <span class="card-arrow">→</span>
+            </a>
+          </div>
+        </div>
+
+        <div id="typography" class="category-section">
+          <h2 class="category-title">
+            <i class="fas fa-font"></i>
+            Typography
+          </h2>
+          <div class="components-grid">
+            <a
+              href="components/headings.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="0"
+            >
+              <div class="card-icon">
+                <i class="fas fa-heading"></i>
+              </div>
+              <h3>Headings</h3>
+              <p>H1-H6 with various styles.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="components/blockquote.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="50"
+            >
+              <div class="card-icon">
+                <i class="fas fa-quote-left"></i>
+              </div>
+              <h3>Blockquote</h3>
+              <p>Quote styles for citations.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="components/code-block.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="card-icon">
+                <i class="fas fa-code"></i>
+              </div>
+              <h3>Code Block</h3>
+              <p>Syntax highlighted code display.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="components/lists.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="150"
+            >
+              <div class="card-icon">
+                <i class="fas fa-list"></i>
+              </div>
+              <h3>Lists</h3>
+              <p>Styled ordered and unordered lists.</p>
+              <span class="card-arrow">→</span>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
