--- a/index.html
+++ b/index.html
@@ -40,14 +40,6 @@
           </a>
         </div>
       </div>
-
-      <div class="hero-grid">
-        <div class="grid-line"></div>
-        <div class="grid-line"></div>
-        <div class="grid-line"></div>
-        <div class="grid-line"></div>
-        <div class="grid-glow"></div>
-      </div>
     </section>
 
     <section class="stats-section">
@@ -140,6 +132,34 @@
             <p>Navbars, sidebars, breadcrumbs, and menus.</p>
             <span class="card-arrow">→</span>
           </a>
+
+          <a
+            href="/components.html#data-display"
+            class="component-card"
+            data-aos="fade-up"
+            data-aos-delay="400"
+          >
+            <div class="card-icon">
+              <i class="fas fa-table"></i>
+            </div>
+            <h3>Data Display</h3>
+            <p>Badges, avatars, tooltips, and tables.</p>
+            <span class="card-arrow">→</span>
+          </a>
+
+          <a
+            href="/components.html#typography"
+            class="component-card"
+            data-aos="fade-up"
+            data-aos-delay="500"
+          >
+            <div class="card-icon">
+              <i class="fas fa-font"></i>
+            </div>
+            <h3>Typography</h3>
+            <p>Headings, blockquotes, code blocks, and lists.</p>
+            <span class="card-arrow">→</span>
+          </a>
         </div>
       </div>
     </section>
@@ -208,6 +228,34 @@
             </div>
             <h3>Content</h3>
             <p>Blog, portfolio, contact, and error pages.</p>
+            <span class="card-arrow">→</span>
+          </a>
+
+          <a
+            href="/template.html#utility"
+            class="component-card"
+            data-aos="fade-up"
+            data-aos-delay="400"
+          >
+            <div class="card-icon">
+              <i class="fas fa-tools"></i>
+            </div>
+            <h3>Utility</h3>
+            <p>File upload, notifications, search, and empty states.</p>
+            <span class="card-arrow">→</span>
+          </a>
+
+          <a
+            href="/template.html#media"
+            class="component-card"
+            data-aos="fade-up"
+            data-aos-delay="500"
+          >
+            <div class="card-icon">
+              <i class="fas fa-images"></i>
+            </div>
+            <h3>Media & Gallery</h3>
+            <p>Galleries, video players, carousels, and comparisons.</p>
             <span class="card-arrow">→</span>
           </a>
         </div>
