--- a/template.html
+++ b/template.html
@@ -288,6 +288,136 @@
             </a>
           </div>
         </div>
+
+        <!-- Utility / Application Templates -->
+        <div id="utility" class="category-section">
+          <h2 class="category-title">
+            <i class="fas fa-tools"></i>
+            Utility / Application
+          </h2>
+          <div class="components-grid">
+            <a
+              href="templates/file-upload.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="0"
+            >
+              <div class="card-icon">
+                <i class="fas fa-cloud-upload-alt"></i>
+              </div>
+              <h3>File Upload</h3>
+              <p>Drag & drop upload with progress.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="templates/notification-center.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="50"
+            >
+              <div class="card-icon">
+                <i class="fas fa-bell"></i>
+              </div>
+              <h3>Notification Center</h3>
+              <p>Dropdown notification list.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="templates/search-results.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="card-icon">
+                <i class="fas fa-search"></i>
+              </div>
+              <h3>Search Results</h3>
+              <p>Result cards with filters.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="templates/empty-state.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="150"
+            >
+              <div class="card-icon">
+                <i class="fas fa-inbox"></i>
+              </div>
+              <h3>Empty State</h3>
+              <p>Illustrative no-data pages.</p>
+              <span class="card-arrow">→</span>
+            </a>
+          </div>
+        </div>
+
+        <!-- Media & Gallery Templates -->
+        <div id="media" class="category-section">
+          <h2 class="category-title">
+            <i class="fas fa-images"></i>
+            Media & Gallery
+          </h2>
+          <div class="components-grid">
+            <a
+              href="templates/image-gallery.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="0"
+            >
+              <div class="card-icon">
+                <i class="fas fa-th"></i>
+              </div>
+              <h3>Image Gallery</h3>
+              <p>Masonry grid with lightbox.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="templates/video-player.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="50"
+            >
+              <div class="card-icon">
+                <i class="fas fa-play-circle"></i>
+              </div>
+              <h3>Video Player</h3>
+              <p>Custom player with controls.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="templates/carousel.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="card-icon">
+                <i class="fas fa-images"></i>
+              </div>
+              <h3>Carousel</h3>
+              <p>Auto-play image slider.</p>
+              <span class="card-arrow">→</span>
+            </a>
+
+            <a
+              href="templates/before-after.html"
+              class="component-card"
+              data-aos="fade-up"
+              data-aos-delay="150"
+            >
+              <div class="card-icon">
+                <i class="fas fa-columns"></i>
+              </div>
+              <h3>Before/After</h3>
+              <p>Comparison slider for images.</p>
+              <span class="card-arrow">→</span>
+            </a>
+          </div>
+        </div>
       </div>
     </section>
 
